name:                AdventOfCode
version:             0.1.0.0
license-file:        LICENSE
author:              Annelies van Hoesel
maintainer:          x@x.com
copyright:           2019 A. van Hoesel
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   AoC19D7
  ghc-options:       -Wall -fwarn-tabs
  build-depends:     base >=4.7 && <5, containers, megaparsec, vector
  
  hs-source-dirs:    .
  default-language:  Haskell2010


  